<resources>
    <string name="app_name">Karaoke</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="karaoke_app">KARAOKE APP</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_in">SIGN IN</string>
    <string name="karaoke">KARAOKE</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="settings">Settings</string>
    <string name="biography">My Biography</string>
    <string name="biography_prompt">Go to settings to change your biography</string>
    <string name="biography_edit">Edit your biography</string>
    <string name="recent_comments">Recent Comments</string>
    <string name="top_liked">Top Liked Songs</string>
    <string name="charts">Top Charts</string>
    <string name="favourites">Your Favourites</string>
    <string name="artwork_description">Album Cover Art</string>
    <string name="profile_description">Profile Picture</string>
    <string name="account_button_description">Account Button</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="skip_button_temp">Skip login (for development only)</string>
    <string name="font_style_option">Font Style</string>
    <string name="font_colour_option">Font Colour</string>
    <string name="font_size_option">Font Size</string>
    <string name="scroll_speed_option">Scroll Speed</string>
    <string name="background_option">Background Colour</string>
    <string name="picture_option">Profile Picture</string>
    <string name="save_settings">Save Settings</string>
    <string name="default_settings">Reset Defaults</string>
    <string name="hint">Default Settings</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="comments">Comments</string>
    <string name="post_comment">Comment</string>
    <string name="enter_comment">Enter Comment Here</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="blank_string" />
</resources>
